frontend/test/should_fail/reference_order_in_def_initialization.grg
// generalized test from bitbucket issue #11 by Peter Grüner

rule testRule {
    modify {
        eval {
            def var i:int = j;
            def var j:int = i;
        }
    }
}
